test target inluded in the scheme

--- a/FlightMeal.xcodeproj/xcshareddata/xcschemes/FlightMeal.xcscheme
+++ b/FlightMeal.xcodeproj/xcshareddata/xcschemes/FlightMeal.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F45A6301273848BE00C9E3A2"
+               BuildableName = "FlightMealTests.xctest"
+               BlueprintName = "FlightMealTests"
+               ReferencedContainer = "container:FlightMeal.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
